[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"
[project]
name = "qspice"
version = "1.0.1"
authors = [
  { name="Nuno Brum", email="me@nunobrum.com" },
]
description = "A set of tools to operate with QSPICE"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.9"
dependencies = [
    "spicelib>=1.4.5",
]
classifiers=[
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["."]  # ["."] by default
include = ["*"]  # ["*"] by default
exclude = [".idea", "doc", "doc_build", ".vscode", ".git"]  # empty by default
namespaces = true  # true by default
